guide/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: intelligent-agriculture-workshop
  name: intelligent-agriculture-workshop
  namespace: workshop-guide
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: intelligent-agriculture-workshop
